--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
 
-	 </div>
+		<div id="root">		
+				<!-- ICI NOUS ALLONS MONTER LE CONTENU DE TOUTE L'APPLICATION WEB -->
+		</div>
+
   </body>
 </html>
